infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: methy
  labels:
    app.kubernetes.io/part-of: methy
